--- a/Diapositivas/References.bib
+++ b/Diapositivas/References.bib
@@ -5,3 +5,34 @@
   year={2005},
   publisher={MIT press}
 }
+
+@incollection{ellery2016survey,
+  title={Survey of past rover missions},
+  author={Ellery, Alex},
+  booktitle={Planetary Rovers},
+  pages={59--69},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{bogue2012robots,
+  title={Robots for space exploration},
+  author={Bogue, Robert},
+  journal={Industrial Robot: An International Journal},
+  year={2012},
+  publisher={Emerald Group Publishing Limited}
+}
+
+@book{Arkin1998BehBasedRobo,
+  title={Behavior-Based Robotics},
+  author={Arkin, R.C.},
+  year={1998},
+  publisher={MIT Press}
+}
+
+@book{Latombe1991MotionPlanning,
+  title={Robot Motion Planning},
+  author={Latombe, J.},
+  year={1991},
+  publisher={Kluwer Academic}
+}
